Rename package to com.droiuby.client