@@ -1,4 +1,4 @@
-package com.dayosoft.activeapp.utils;
+package com.droiuby.client.utils;
 
 import java.io.BufferedReader;
 import java.io.ByteArrayInputStream;
@@ -618,7 +618,7 @@ public class NanoHTTPD {
 						matchbyte = i;
 					matchcount++;
 					if (matchcount == boundary.length) {
-						matchbytes.addElement(new Integer(matchbyte));
+						matchbytes.addElement(Integer.valueOf(matchbyte));
 						matchcount = 0;
 						matchbyte = -1;
 					}
